more styling and spacing fixes for dark mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -6494,16 +6494,29 @@ body {
   overflow-x: hidden;
   font-size: 20px; }
 
+h2 {
+  font-size: 1.8rem; }
+
+#header {
+  line-height: 1;
+  margin: 2rem 0; }
+  #header h1 {
+    font-size: 1.8rem; }
+  #header small {
+    font-weight: bold;
+    font-size: 0.8rem; }
+  #header .theme-switcher {
+    font-weight: bold;
+    font-size: 0.9rem; }
+
 .card {
   margin: 1rem 0;
   text-align: center; }
   .card .card-title {
-    color: #8b97c6;
     font-size: 0.8rem;
     font-weight: bold; }
   .card .card-text {
     font-weight: lighter;
-    color: #8b97c6;
     letter-spacing: 4px;
     font-size: 0.7rem;
     text-transform: uppercase; }
@@ -6511,10 +6524,8 @@ body {
       font-weight: bold;
       font-size: 2.8rem;
       display: block;
-      color: white;
       margin-bottom: 0; }
   .card .card-bottom {
-    color: #1db489;
     font-size: 0.7rem;
     margin-top: 1.8rem;
     font-weight: bold; }
@@ -6522,8 +6533,20 @@ body {
 body.dark {
   background: #1e202a;
   color: white; }
+  body.dark #header small {
+    color: #8b97c6; }
+  body.dark #header .theme-switcher {
+    color: #8b97c6; }
   body.dark .card {
     background: #252a41; }
+    body.dark .card .card-title {
+      color: #8b97c6; }
+    body.dark .card .card-text {
+      color: #8b97c6; }
+      body.dark .card .card-text .followers {
+        color: white; }
+    body.dark .card .card-bottom {
+      color: #1db489; }
 
 body.light {
   background: white;
